Migrated to Java 25